case swagger update
